--- a/index.html
+++ b/index.html
@@ -1,12 +1,24 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="zh-TW">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>多那之門市 SOP 系統</title>
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
+    
+    <!-- 讓網頁可以全螢幕運行 (APP 化) -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="apple-mobile-web-app-title" content="歐樂沃SOP">
+    <meta name="theme-color" content="#1a1a1a">
+
+    <title>多那之歐樂沃門市 SOP 考核系統</title>
+    
+    <!-- 引入 Tailwind CSS (若您的專案沒安裝，請加上這行 CDN) -->
+    <script src="https://cdn.tailwindcss.com"></script>
   </head>
-  <body>
+  <body class="bg-gray-100">
     <div id="root"></div>
+    <!-- 指向您的進入點檔案 -->
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
